fix: fix buttons styles, fix durations, hide scrollbar in wekkview

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -43,4 +43,12 @@ button {
   .MobileButtonContainer {
     @apply max-sm:fixed max-sm:bottom-24 max-sm:right-4 max-sm:z-[5];
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
